@@ -3786,3 +3786,5 @@ Changelog for GXemul:
 20081217	Beginning on implementing the SCRIPTS instruction set for
 		dev_osiop.
 20081219	Continuing a little bit on the osiop SCRIPTS ISA.
+20081221	Implementing an instruction combination for M88K idle loop
+		detection (works with OpenBSD/mvme88k).
